<resources>
    <string name="app_name">LawCloudServer</string>


    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="question_and_feed">问题和意见</string>
    <string name="your_question">您的问题会反馈给平台客服，感谢您的宝贵建议</string>
    <string name="get_feed">收到反馈后我们会及时与您沟通</string>
    <string name="account_and_password">账号和密码</string>
    <string name="user_center_set">设置</string>
    <string name="phone">手机号</string>
    <string name="set_password">修改密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_password">确认密码</string>
    <string name="please_old_password">请输入原密码</string>
    <string name="please_sure_password">重新输入新密码</string>
    <string name="qq">QQ</string>
    <string name="wei_xin">微信</string>
    <string name="choose_other_way_login">使用第三方平台快速登录</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="password_6">密码6~20位数字或字母</string>
    <string name="i_agree">我同意“</string>
    <string name="user_register_agreement">用户注册协议</string>
    <string name="finish">完成</string>
    <string name="qualification_certification">资格认证</string>
    <string name="choose_lay_user">请选择身份</string>
    <string name="lawyer">律师</string>
    <string name="have_lawyer_certificate">拥有《中华人民共和国律师执业证》</string>
    <string name="have_lay_certificate">拥有《法律职业资格证书》</string>
    <string name="lay_advisser">法律顾问</string>
    <string name="qualification_toast">1.为了保证确认通过，请按要求填写认证资料\n2.部分信息将在主页展示，如个人简介，图文咨询价格，擅长领域等，请认真填写\n*如需帮助，请联系我们的客服</string>
    <string name="lawyer_certification">律师认证</string>
    <string name="upload_photo">上传头像</string>
    <string name="name">姓名</string>
    <string name="about_certificate">与证书一致</string>
    <string name="chose">选择</string>
    <string name="start_time_job">工作年限</string><!--执业起始时间-->
    <string name="work_house">工作单位</string><!--执业律所-->
    <string name="user_main">个人主页显示</string>
    <string name="work_location">未填写</string>
    <string name="heads">正面</string>
    <string name="tails">反面</string>
    <string name="upload_name_photo">上传律师执业证姓名照片页</string>
    <string name="upload_year">上传律师执业证年检页</string>
    <string name="lawyer_toast">请上传清晰图，请勿旋转方向或者打码，否则不予通过</string>
    <string name="next">下一步</string>
    <string name="set">设置</string>
    <string name="photo_text_consult">图文咨询（元/次）</string>
    <string name="input_price">输入价格</string>
    <string name="be_good_at">擅长领域</string>
    <string name="month_once">每月仅限修改一次</string>
    <string name="location">所在地</string>
    <string name="no_choose">未选择</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="email">邮箱</string>
    <string name="please_fill_in_the_usual_mailbox">请填写常用邮箱</string>
    <string name="weixin">微信号</string>
    <string name="call_you">方便与您联系</string>
    <string name="alipay">支付宝</string>
    <string name="important_use_pay">重要！结算用</string>
    <string name="detailed_data">详细的个人简介有助于用户了解你的专业性（18-150字）</string>
    <string name="submit_is_agree">提交即代表同意《认证用户须知》</string>
    <string name="submit_audit">提交审核</string>
    <string name="submit">提交</string>
    <string name="personal_home_display">个人主页显示</string>
    <string name="home_page">首页</string>
    <string name="message">消息</string>
    <string name="personal_center">个人中心</string>
    <string name="money">金额</string>
    <string name="point_count">点数</string>
    <string name="user_order">我的订单</string>
    <string name="invite_friends">邀请好友</string>
    <string name="feedback">反馈意见</string>
    <string name="more">更多</string>
    <string name="more_ok">已完成订单</string>
    
    <string name="home_title">律律专业版</string>
    <string name="account_balance">余额</string>
    <string name="rob_order_consult_time">咨询时长</string>
    <string name="photo_text_consult_order_num">咨询订单</string>
    <string name="rob_order">抢单</string>
    <string name="i_rob_order">我要抢单</string>
    <string name="question_describe">问题描述</string>
    <string name="question_describe2">问题描述：</string>
    <string name="photo_text_order">图文咨询订单</string>
    <string name="minute">分</string>
    <string name="order">单</string>
    <string name="rmb">元</string>
    <string name="being_consult">正在咨询</string>
    <string name="online_on">在线</string>
    <string name="my_consult">我的咨询</string>
    <string name="fast_consult">快速咨询</string>
    <string name="book_service">文书服务</string>

    <string name="network_error">网络异常</string>
    <string name="ok">成功</string>
    <string name="account_or_password_error">账号或密码错误，请重新输入</string>
    <string name="account_error">请注册后再登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_ago">登录过期，请重新登录</string>
    <string name="set_ok">修改成功</string>
    
    <string name="phone_no_11">请输入正确的手机号</string>
    <string name="question_is_0">请填写反馈意见后再提交</string>
    <string name="password_is_6">密码至少为6位数</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="password_new_sure_error">新密码与确认密码不同</string>
    <string name="password_new_old">原密码与新密码相同</string>
    <string name="please_agree_register">请同意“用户注册协议”</string>
    <string name="law_data_no">请完善信息</string>
    <string name="please_agree_user">同意《认证用户须知》后才能提交</string>

    <string name="phone_number">1234567890</string>


</resources>
