<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical">


    <!--title-->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#3BB3EA"
        android:gravity="center_horizontal"
        android:paddingTop="35dp"
        android:text="@string/home_title"
        android:textColor="#fff"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />


    <!--时长、单数-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3BB3EA"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rob_order_consult_time"
                android:textColor="#fff"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/minute"
                    android:textColor="#fff"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>


        <!--账号余额-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_balance"
                android:textColor="#fff"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/rmb"
                    android:textColor="#fff"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_text_consult_order_num"
                android:textColor="#fff"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_order_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/order"
                    android:textColor="#fff"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <!--图文咨询订单 更多-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="#fff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="#333333"
            android:gravity="center_vertical"
            android:text="@string/photo_text_order" />


        <TextView
            android:id="@+id/tv_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/order_ok_r"
            android:gravity="right|center"
            android:text="@string/more_ok"
            android:textSize="11sp"
            android:textColor="#999999"/>

    </LinearLayout>



    <RelativeLayout
        android:background="#fff"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--我要抢单-->
        <TextView
            android:id="@+id/tv_user_rob_order"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_rob_order_bg"
            android:gravity="center"
            android:text="@string/rob_order"
            android:textColor="#fff"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:layout_marginRight="12dp"
            android:textSize="12sp" />


    </RelativeLayout>



</LinearLayout>