<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">



    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:src="@mipmap/back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/set_password"
            android:textColor="#000000"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f4f3f4" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="19dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/old_password"
                    android:textSize="14sp"
                    android:textColor="#333"
                    android:layout_weight="1"/>


                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/please_old_password"
                    android:maxLength="20"
                    android:textColorHint="#A8A8A8"
                    android:textSize="14sp" />



            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeefee" />


            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="19dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/new_password"
                    android:textSize="14sp"
                    android:textColor="#333"
                    android:layout_weight="1"/>


                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/password_6"
                    android:maxLength="20"
                    android:textColorHint="#A8A8A8"
                    android:textSize="14sp" />



            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeefee" />


            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="19dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/sure_password"
                    android:textSize="14sp"
                    android:textColor="#333"
                    android:layout_weight="1"/>


                <EditText
                    android:id="@+id/et_sure_password"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/please_sure_password"
                    android:maxLength="20"
                    android:textColorHint="#A8A8A8"
                    android:textSize="14sp" />



            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeefee" />




            <!--完成-->
            <TextView
                android:id="@+id/tv_finish"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/shape_login_button_bn"
                android:gravity="center"
                android:text="@string/finish"
                android:textColor="#ffffff"
                android:textSize="16sp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>