<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical">


    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fff">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:src="@mipmap/back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/i_rob_order"
            android:textColor="#000000"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f4f3f4" />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c1c1c1" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_k"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rob_bn"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/fast_consult"
            android:textColor="@drawable/selector_rob_text_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_b"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rob_bn"
            android:button="@null"
            android:gravity="center"
            android:text="@string/book_service"
            android:textColor="@drawable/selector_rob_text_color"
            android:textSize="14sp" />

    </RadioGroup>

     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>




</LinearLayout>